--- a/index.html
+++ b/index.html
@@ -4,25 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brian's Portfolio</title>
+    <title>My Resume</title>
 </head>
 
 <body>
-    <h1>Brian Nguyen's Portfolio</h1>
-    <h2>I'm a student</h2>
+    <h1>Dao Tuan Anh Nguyen (Brian)</h1>
+    <img src="./assets/427117256_747436324186937_6095003950795571304_n.jpg" width="200"
+        alt="This is the handsome man" />
+    <h2>Summary</h2>
+    <p>My name is Brian Nguyen. I'm a results-driven software development student with experience in C/C++ and
+        Web-Development. My passion for technology and proven adaptability allow me to quickly master new concepts and
+        frameworks.</p>
     <hr />
 
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" width="200" alt="This is the movie ranking project" />
-
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday-invite.png" width="200" alt="This is the birthday invite project" />
+    <h2>Education</h2>
+    <ul>
+        <li>Bachelor of Engineering (Software Engineering) - Seneca Polytechnic</li>
+        <li>Computer System Technician (CSN) - Seneca Polytechnic</li>
+    </ul>
     <hr />
 
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <h2>Work Experience</h2>
+    <ul>
+        <li>
+            <div class="work-experience">
+                <h3>SNE Seller (T3 design)</h3>
+                <p>December 2024
+                <ul>
+                    <li>Persuaded customers on product benefits, leading to increased sales and customer satisfaction.
+                    </li>
+                    <li>Demonstrated adaptability by quickly learning about new products and promotional offers.</li>
+                    <li>Maintained a positive attitude in a fast-paced sales environment, handling multiple customer
+                        interactions simultaneously.</li>
+                </ul>
+                </p>
+            </div>
+        </li>
+    </ul>
+    <hr />
+
+    <h2>Skills</h2>
+    <ul>
+        <li>Technician: <img src="./assets/541415.png" width="12" /><img src="./assets/541415.png" width="12" /><img
+                src="./assets/541415.png" width="12" /><img src="./assets/541415.png" width="12" /></li>
+        <li>Problem-Solving: <img src="./assets/541415.png" width="12" /><img src="./assets/541415.png"
+                width="12" /><img src="./assets/541415.png" width="12" /></li>
+        <li>Customer Service: <img src="./assets/541415.png" width="12" /><img src="./assets/541415.png"
+                width="12" /><img src="./assets/541415.png" width="12" /></li>
+        <li>Organization: <img src="./assets/541415.png" width="12" /><img src="./assets/541415.png" width="12" /><img
+                src="./assets/541415.png" width="12" /></li>
+    </ul>
+    <hr />
+
+    <h2>Award and Certifications</h2>
+    <ul>
+        <li>Web Development (Udemy)</li>
+        <li>Computer Science (Hardvard)</li>
+        <li>100 days of code (Udemy)</li>
+    </ul>
+    <hr />
+
+    <h2>Other</h2>
+    <ul>
+        <li><a href="./about.html">My hobbies</a></li>
+        <li><a href="./contact.html">Contact Me</a></li>
+    </ul>
+
+    <p>@Brian Nguyen. No copy right</p>
+
+
 </body>
 
 </html>
-
-
